got it taking in input but not multiple team members

--- a/output/final.html
+++ b/output/final.html
@@ -23,22 +23,10 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                {{ team }}
+                {{team}}
             </div>
         </div>
     </div>
 </body>
 
-</html><div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">int</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 34</li>
-            <li class="list-group-item">Email: <a href="mailto:int.com">{{email}}</a></li>
-            <li class="list-group-item">School: ucsd</li>
-        </ul>
-    </div>
-</div>
+</html>
