--- a/output/final.html
+++ b/output/final.html
@@ -23,10 +23,49 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                abc
+                Laura's team
             </div>
         </div>
     </div>
 </body>
 
-</html>
+</html><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title"><div id=name>
+            
+        </div></h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:joey@laura.com">
+              joey@laura.com  </a></li>
+            <li class="list-group-item">Office number: 1"</li>
+        </ul>
+    </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Alisha</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:alisha@laura.com">alisha@laura.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/alishaHub" target="_blank" rel="noopener noreferrer">alishaHub</a></li>
+        </ul>
+    </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">mary</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:mary@laura.com">mary@laura.com</a></li>
+            <li class="list-group-item">School: UCSD</li>
+        </ul>
+    </div>
+</div>
